tests/functional/lang/parse-fail-unexpected-let.err.exp
error: syntax error, unexpected 'let', expecting identifier or 'or' or '${' or '"'
       at «stdin»:1:3:
            1| a.let
             |   ^
            2|
